Added gitignore and http-server as dev-d

--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "http-server ./source",
+    "start": "http-server ./",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "http-server": "^0.12.1"
+  }
 }
